--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ layout:  blank
                                 <h4 class="subheading">Systems Safety Engineer</h4>
                                 <h4 class="subheading">Gulfstream Aerospace</h4>
                             </div>
-                            <div class="timeline-body"><p class="text-muted">One area I grew working as a Systems Safety Engineer was in reading comprehension of technical documentation. Systems Safety Engineers are responsible for making sure that every step of validation, verification, and certification of aircraft systems are documented and thoroughly assessed by the appropriate subject matter experts. I was able to contirbute to certification of aircraft by taking responsibility for the lighting system which entailed drafting and/or developing System Safety Assessment, Fault Hazard Assessment, and Fault Tree analysis documents.</p></div>
+                            <div class="timeline-body"><p class="text-muted">One area I grew working as a Systems Safety Engineer was in reading comprehension of technical documentation. Systems Safety Engineers are responsible for making sure that every step of validation, verification, and certification of aircraft systems are documented and thoroughly assessed by the appropriate subject matter experts. I was able to contribute to certification of aircraft by taking responsibility for the lighting system which entailed drafting and/or developing System Safety Assessment, Fault Hazard Assessment, and Fault Tree analysis documents.</p></div>
                         </div>
                     </li>
                     <li>
