--- a/portfoliocontinued.html
+++ b/portfoliocontinued.html
@@ -44,82 +44,85 @@
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 2-->
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="##portfolioModal2">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/construction.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/construction.jpg" alt="..." style="display: block; margin: 0 auto; width:100%; max-width:350px;"/>
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Mechanical Nano-Fiber Spinning Apparatus</div>
-                                <div class="portfolio-caption-subheading text-muted">Academic</div>
+                                <div class="portfolio-caption-heading">Under Construction</div>
+                                <div class="portfolio-caption-subheading text-muted">Under Construction</div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 3-->
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="##portfolioModal3">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/construction.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/construction.jpg" alt="..." style="display: block; margin: 0 auto; width:100%; max-width:350px;"/>
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">RFID Landmarking in SLAM for Autonomous Robotics</div>
-                                <div class="portfolio-caption-subheading text-muted">Academic</div>
+                                <div class="portfolio-caption-heading">Under Construction</div>
+                                <div class="portfolio-caption-subheading text-muted">Under Construction</div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
                         <!-- Portfolio item 4-->
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="##portfolioModal4">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <div class="timeline-panel-pics">
-                                    <img class="img-fluid" src="assets/img/portfolio/construction.jpg" alt="..." />
+                                    <img class="img-fluid" src="assets/img/portfolio/construction.jpg" alt="..." style="display: block; margin: 0 auto; width:100%; max-width:350px;"/>
                                 </div>
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Flight Test Sortie</div>
-                                <div class="portfolio-caption-subheading text-muted">Professional</div>
+                                <div class="portfolio-caption-heading">Under Construction</div>
+                                <div class="portfolio-caption-subheading text-muted">Under Construction</div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
                         <!-- Portfolio item 5-->
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="##portfolioModal5">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/construction.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/construction.jpg" alt="..." style="display: block; margin: 0 auto; width:100%; max-width:350px;"/>
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Manufacturing Experience</div>
-                                <div class="portfolio-caption-subheading text-muted">Heatcraft Refrigeration</div>
+                                <div class="portfolio-caption-heading">Under Construction</div>
+                                <div class="portfolio-caption-subheading text-muted">Under Construction</div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <!-- Portfolio item 6-->
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="##portfolioModal3">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/construction.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/construction.jpg" alt="..." style="display: block; margin: 0 auto; width:100%; max-width:350px;"/>
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Animatronic EMG Testing</div>
-                                <div class="portfolio-caption-subheading text-muted">Hobby</div>
+                                <div class="portfolio-caption-heading">Under Construction</div>
+                                <div class="portfolio-caption-subheading text-muted">Under Construction</div>
                             </div>
                         </div>
                     </div>
                     
                 </div>
+            </div>
+            <div class="mt-4">
+                <a class="btn btn-primary btn-xl text-uppercase" href="index.html" style="display: block; margin: 0 auto; width:100%; max-width:350px;">Home</a>
             </div>
             <!-- Portfolio Modals-->
         <!-- Portfolio item 2 modal popup-->
@@ -382,5 +385,14 @@
             </div>
         </div>
         </section>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+        <!-- * *                               SB Forms JS                               * *-->
+        <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
+        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
+        <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
