--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ layout: default
 title: "All Blog Posts"
 ---
 
-<section class="page-section bg-light">
+<section class="page-section" style="background-color: rgb(240, 240, 240);">
     <div class="container text-center">
         <h2 class="section-heading text-uppercase">All Blog Posts</h2>
         <div class="row">
