--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ layout:  blank
             </div>
         </header>                          
         <!-- Blog Section (Replacing Skillset Section) -->
-        <section class="page-section" id="updates" style="background: url('assets/img/Mexico/Leon.jpg') no-repeat center center; background-size: 104%; min-height: 800px; position:relative; padding-top:3rem;">
+        <section class="page-section" id="updates" style="background: url('assets/img/Mexico/Leon.jpg') no-repeat center center; background-size: cover; min-height: 800px; position:relative; padding-top:3rem;">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-white text-uppercase" style="text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);">Latest Project Updates</h2>
