--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ layout:  blank
                 </div>
                 <div class="row">
                     <!-- Left card: Post with a specific title -->
-                    <div class="col-md-6 blog-post" style="background-color: rgba(255, 255, 255, 0.8); padding: 20px; border-radius: 10px; margin-bottom: 20px;">
+                    <div class="col-12 col-md-6 blog-post" style="background-color: rgba(255, 255, 255, 0.8); padding: 20px; border-radius: 10px; margin-bottom: 20px;">
                         {% assign specific_post = nil %}
                         {% for post in site.posts %}
                             {% if post.title == "Project Goals V1.0" %}
