--- a/index.html
+++ b/index.html
@@ -362,9 +362,7 @@ layout:  blank
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; Brennan Drake 2022</div>
-                    <div class="col-lg-4 text-lg-end">
-                    </div>
+                    <div class="col-lg-6 text-lg-start">© Brennan Drake, 2024. Licensed under a <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</div>
                 </div>
             </div>
         </footer>
