--- a/blog.html
+++ b/blog.html
@@ -17,3 +17,8 @@ title: "All Blog Posts"
         </div>
     </div>
 </section>
+
+<footer>
+    Blog content © Brennan Drake, 2024. Licensed under a 
+    <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a>.
+</footer>
