--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ layout:  blank
                     <br>
                 </div>
               <body>
-                <iframe src="assets/Brennan_Drake_Resume_5-3-2024.pdf" width="100%" height="1000px">
+                <iframe src="assets/Brennan_Drake_Resume_12-2024.pdf" width="100%" height="1000px">
                 </iframe>
               </body>
         </section>
@@ -362,7 +362,7 @@ layout:  blank
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6 text-lg-start">© Brennan Drake, 2024. Licensed under a <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</div>
+                    <div class="col-lg-6 text-lg-start">© Brennan Drake, 2024. Licensed under a <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">CC BY-NC-ND 4.0 License</a></div>
                 </div>
             </div>
         </footer>
